--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-T9RRX9NFL6"></script>
@@ -41,6 +41,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">グラフルとは</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">サービス紹介</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">お問い合わせ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://graphul.jp/blog/">ブログ</a></li>
                     </ul>
                 </div>
             </div>
